[gd_scene load_steps=12 format=2]

[ext_resource path="res://Flatway.tscn" type="PackedScene" id=1]
[ext_resource path="res://Protagonist.tscn" type="PackedScene" id=2]
[ext_resource path="res://Column.tscn" type="PackedScene" id=3]
[ext_resource path="res://StartScene.gd" type="Script" id=4]
[ext_resource path="res://images/btn_continue_pressed.png" type="Texture" id=5]
[ext_resource path="res://images/btn_continue_normal.png" type="Texture" id=6]
[ext_resource path="res://fonts/ButtonText.tres" type="DynamicFont" id=7]
[ext_resource path="res://images/flag_ru_normal.png" type="Texture" id=8]
[ext_resource path="res://images/flag_ru_pressed.png" type="Texture" id=9]
[ext_resource path="res://images/btn_sound_normal.png" type="Texture" id=10]
[ext_resource path="res://images/btn_sound_pressed.png" type="Texture" id=11]

[node name="StartScene" type="Container"]
script = ExtResource( 4 )

[node name="Flatway" parent="." instance=ExtResource( 1 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0 )

[node name="Column" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, -4 )

[node name="Column2" parent="." instance=ExtResource( 3 )]
transform = Transform( 1.19249e-08, 0, -1, 0, 1, 0, 1, 0, 1.19249e-08, 1.6, -0.5, -4 )

[node name="Column3" parent="." instance=ExtResource( 3 )]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -1.6, -0.5, -4 )

[node name="Column4" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.2, -0.5, -4 )

[node name="Column5" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3.2, -0.5, -4 )

[node name="Column6" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.8, -0.5, -4 )

[node name="Column7" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 6.4, -0.5, -4 )

[node name="Column8" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 8, -0.5, -4 )

[node name="Column9" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4.8, -0.5, -4 )

[node name="Column10" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -6.4, -0.5, -4 )

[node name="Column11" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -8, -0.5, -4 )

[node name="Protagonist" parent="." instance=ExtResource( 2 )]

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 3 )

[node name="Control" type="Control" parent="."]
margin_right = 1024.0
margin_bottom = 1920.0

[node name="ButtonSound" type="TextureButton" parent="Control"]
margin_left = 20.0
margin_top = 20.0
margin_right = 160.0
margin_bottom = 160.0
toggle_mode = true
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 11 )

[node name="StartButton" type="TextureButton" parent="Control"]
margin_left = 224.0
margin_top = 1470.0
margin_right = 824.0
margin_bottom = 1614.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 5 )

[node name="StartLabel" type="Label" parent="Control/StartButton"]
margin_left = 170.0
margin_top = 30.0
margin_right = 210.0
margin_bottom = 44.0
custom_fonts/font = ExtResource( 7 )
text = "Начать забег"

[node name="LanguageButton" type="TextureButton" parent="Control"]
margin_left = 750.0
margin_top = 20.0
margin_right = 1018.0
margin_bottom = 148.0
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 9 )

[node name="LanguageLabel" type="Label" parent="Control/LanguageButton"]
margin_left = 150.0
margin_top = 30.0
margin_right = 242.0
margin_bottom = 90.0
custom_fonts/font = ExtResource( 7 )
text = "Рус"

[connection signal="toggled" from="Control/ButtonSound" to="." method="_on_ButtonSound_toggled"]
[connection signal="pressed" from="Control/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="Control/LanguageButton" to="." method="_on_LanguageButton_pressed"]
